Change Web Config to Local

--- a/RMS/Web.config
+++ b/RMS/Web.config
@@ -23,8 +23,9 @@
 		<add name="COMMON_DATA2ConnectionString" connectionString="Data Source=192.168.0.154;Initial Catalog=COMMON_DATA;Integrated Security=True" providerName="System.Data.SqlClient" />
  <add name="DefaultConnection2" connectionString="Data Source=192.168.0.154;Initial Catalog=COMMON_DATA;Integrated Security=True" providerName="System.Data.SqlClient" />
 <add name="DefaultConnection3" connectionString="Data Source=192.168.0.154;Initial Catalog=DRR_eProcurement;Integrated Security=False;User Id=sqladmin;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-<add name="DefaultConnection" connectionString="Data Source=192.168.0.175;Initial Catalog=OPM_RMS;Integrated Security=False;User Id=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />
-
+<!--<add name="DefaultConnection" connectionString="Data Source=192.168.0.175;Initial Catalog=OPM_RMS;Integrated Security=False;User Id=sa;Password=P@ssw0rd;" providerName="System.Data.SqlClient" />-->
+<add name="DefaultConnection" connectionString="Data Source=BANK\SQLSERVER2014;Initial Catalog=OPM_RMS;Integrated Security=True;" providerName="System.Data.SqlClient" />
+  
   </connectionStrings>
 	<system.web>
 <customErrors mode="Off"/>
